--- a/src/app/EspacePatient/profile-patient/profile-patient.component.html
+++ b/src/app/EspacePatient/profile-patient/profile-patient.component.html
@@ -33,13 +33,20 @@
         </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0)" routerLink="/donnerAvis" routerLinkActive="active">
+          <i class="bi bi-chat-right-dots-fill " style="color: white"></i> Donner Avis
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" routerLink="/messagesfromAdmin" routerLinkActive="active">
           <i class="bi bi-envelope-fill "  style="color: white"></i>Message
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" routerLink="/listRdv" routerLinkActive="active">
-          <i class="bi bi-envelope-fill  " style="color: white"></i>Liste de rendez-vous
+
+          <i class="bi bi-card-list" style="color: white"></i>
+          Liste de rendez-vous
         </a>
       </li>
 
