--- a/src/app/detail-profile/detail-profileA/affecterMedecin/affecter-medecin/affecter-medecin.component.html
+++ b/src/app/detail-profile/detail-profileA/affecterMedecin/affecter-medecin/affecter-medecin.component.html
@@ -4,7 +4,7 @@
     <div class="img-bx">
       <img src="{{medecin.image}}" alt="img" />
     </div>
-    <div class="content">
+    <div class="content" style="margin-top: -2.5rem!important;">
       <div class="detail">
         <h2>{{medecin.firstname}} {{medecin.lastname}}<br /><span>{{getSpecialiteWithoutBrackets(medecin.specialite)}}</span></h2>
         <ul class="sci">
