--- a/src/app/detail-profile/detail-profileM/detail-accpted-apnt/detail-accpted-apnt.component.html
+++ b/src/app/detail-profile/detail-profileM/detail-accpted-apnt/detail-accpted-apnt.component.html
@@ -48,6 +48,12 @@
     </span>
       <h6 style="font-weight: bold">{{apntmnt.phone}} </h6>
     </div>
+    <div >
+    <span style="color: #336DA5 ; margin-top: 1rem">
+      diabete :
+    </span>
+      <h6 style="font-weight: bold">{{apntmnt.mesureDiabete}} </h6>
+    </div>
 
 
 
