--- a/src/app/detail-profile/detail-profileP/modifier-rdv/modifier-rdv.component.html
+++ b/src/app/detail-profile/detail-profileP/modifier-rdv/modifier-rdv.component.html
@@ -104,15 +104,11 @@
 
 
 
-
-
-
                     <div class="row">
                       <div class="col-md-5 mt-4 mb-4 pb-2">
                         <label >Reserver date</label>
                         <div class="md-form md-outline input-with-post-icon datepicker" id="customDays">
-                          <input type="datetime-local" id="datetime" name="datetime" formControlName="dateRDV"
->
+                          <input type="datetime-local" id="datetime" name="datetime" formControlName="dateRDV">
                         </div>
 
                       </div>
@@ -121,23 +117,36 @@
                           <div><label class="form-label" for="form3Examplev11">Type de sang</label></div>
 
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="typeSang" value="A" id="form3Examplev11" formControlName="typeSang">
-                            <label class="form-check-label" for="form3Examplev11">A</label>
+                            <input class="form-check-input" type="radio" name="typeSang" value="A-" id="form3Examplev11" formControlName="typeSang">
+                            <label class="form-check-label" for="form3Examplev11">A-</label>
+                            <input class="form-check-input"  style="margin-left: 2rem" type="radio" name="typeSang" value="A+" id="form3Examplev12"  formControlName="typeSang"
+                            >
+                            <label class="form-check-label" for="form3Examplev12" style="margin-left: 4rem">A+</label>
+
                           </div>
 
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="typeSang" value="B" id="form3Examplev12"  formControlName="typeSang">
-                            <label class="form-check-label" for="form3Examplev12">B</label>
+                            <input class="form-check-input" type="radio" name="typeSang" value="B-" id="form3Examplev123"  formControlName="typeSang">
+                            <label class="form-check-label" for="form3Examplev123">B-</label>
+                            <input class="form-check-input"  style="margin-left: 2rem" type="radio" name="typeSang" value="B+" id="form3Examplev124"  formControlName="typeSang"
+                            >
+                            <label class="form-check-label" for="form3Examplev1234" style="margin-left: 4rem">B+</label>
                           </div>
 
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="typeSang" value="AB" id="form3Examplev13" formControlName="typeSang">
-                            <label class="form-check-label" for="form3Examplev13">AB</label>
+                            <input class="form-check-input" type="radio" name="typeSang" value="AB-" id="form3Examplev13" formControlName="typeSang">
+                            <label class="form-check-label" for="form3Examplev13">AB-</label>
+                            <input class="form-check-input"  style="margin-left: 1.3rem" type="radio" name="typeSang" value="AB+" id="form3Examplev125"  formControlName="typeSang"
+                            >
+                            <label class="form-check-label" for="form3Examplev125" style="margin-left: 3.3rem">AB+</label>
                           </div>
 
                           <div class="form-check">
-                            <input class="form-check-input" type="radio" name="typeSang" value="O" id="form3Examplev14"  formControlName="typeSang">
-                            <label class="form-check-label" for="form3Examplev14">O</label>
+                            <input class="form-check-input" type="radio" name="typeSang" value="O-" id="form3Examplev14"  formControlName="typeSang">
+                            <label class="form-check-label" for="form3Examplev14">O-</label>
+                            <input class="form-check-input"  style="margin-left: 2rem" type="radio" name="typeSang" value="O+" id="form3Examplev104"  formControlName="typeSang"
+                            >
+                            <label class="form-check-label" for="form3Examplev104" style="margin-left: 4rem">O+</label>
                           </div>
 
                           <div class="form-check">
@@ -147,9 +156,177 @@
 
                         </div>
                       </div>
+                      <div class="row" style="margin-top: 1rem">
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                          <div class="form-outline">
+                            <label class="form-label" for="form3Examplev55">Etes vous  alcoolique ?</label>
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="alcool" value="oui" id="form3Examplev101" formControlName="alcoolique">
+                              <label class="form-check-label" for="form3Examplev101">oui</label>
+                              <input class="form-check-input"  style="margin-left: 2rem" type="radio" name="alcool" value="non" id="form3Examplev102"  formControlName="alcoolique"
+                              >
+                              <label class="form-check-label" for="form3Examplev102" style="margin-left: 4rem">non</label>
+
+                            </div>
+                          </div>
+
+                        </div>
+
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                          <div class="form-outline">
+                            <label class="form-label" for="form337Examplev60">Etes vous fumée?</label>
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="fumeur" value="oui" id="form3Examplev111" formControlName="fumee">
+                              <label class="form-check-label" for="form3Examplev111">oui</label>
+                              <input class="form-check-input"  style="margin-left: 2rem" type="radio" name="fumeur" value="non" id="form3Examplev122"  formControlName="fumee"
+                              >
+                              <label class="form-check-label" for="form3Examplev122" style="margin-left: 4rem">non</label>
+
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                      <div class="row" style="margin-top: 1rem">
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                          <div class="form-outline">
+                            <label class="form-label" for="form337Examplev61">Etes Vous Diabétique ?</label>
+
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="diabete" value="oui" id="form3Examplev151" formControlName="diabete"
+                                     (change)="showDiabeteFields($event)">
+                              <label class="form-check-label" for="form3Examplev151">oui</label>
+                              <input class="form-check-input" style="margin-left: 2rem" type="radio" name="diabete" value="non" id="form3Examplev152"
+                                     formControlName="diabete" (change)="hideDiabeteFields()">
+                              <label class="form-check-label" for="form3Examplev152" style="margin-left: 4rem">non</label>
+                            </div>
+
+                            <div class="form-outline mt-3" *ngIf="showDiabete">
+                              <label class="form-label" for="diabeteAnalyse">Dernière analyse de diabète</label>
+                              <input type="file" accept="image/*" (change)="onSelectFile($event)"  id="diabeteAnalyse" class="form-control" formControlName="analyseDiabete">
+                            </div>
+                            <div class="form-outline mt-3" *ngIf="showDiabete">
+                              <label class="form-label" for="diabeteMesure">Dernière mesure de diabète</label>
+                              <input type="number" id="diabeteMesure" class="form-control" formControlName="mesureDiabete">
+                            </div>
+                          </div>
+
+
+
+                        </div>
+
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                          <div class="form-outline">
+                            <label class="form-label" for="form337Examplev61">Etes-vous de la tension ?</label>
+
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="tension" value="oui" id="tension" formControlName="tension"
+                                     (change)="showTensionFields($event)">
+                              <label class="form-check-label" for="tension">oui</label>
+                              <input class="form-check-input" style="margin-left: 2rem" type="radio" name="tension" value="non" id="tension2"
+                                     formControlName="tension" (change)="hideTensionFields()">
+                              <label class="form-check-label" for="tension2" style="margin-left: 4rem">non</label>
+                            </div>
+
+
+                            <div class="form-outline mt-3" *ngIf="showTension">
+                              <label class="form-label" for="tensionMesure">Dernière mesure de tension</label>
+                              <input type="number" id="tensionMesure" class="form-control" formControlName="mesureTension">
+                            </div>
+                          </div>
+
+
+
+                        </div>
+
+                      </div>
+                      <div class="row" style="margin-top: 1rem">
+
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                          <div class="form-outline">
+                            <label class="form-label" for="form337Examplev61">Avez-vous d'autres maladies?</label>
+
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="autreMaladie" value="oui" id="autreM" formControlName="autreMaladie"
+                                     (change)="showAutreMaladieFields($event)">
+                              <label class="form-check-label" for="AutreM">oui</label>
+                              <input class="form-check-input" style="margin-left: 2rem" type="radio" name="autreMaladie" value="non" id="Autre"
+                                     formControlName="autreMaladie" (change)="hideAutreMaladieFields()">
+                              <label class="form-check-label" for="Autre" style="margin-left: 4rem">non</label>
+                            </div>
+
+                            <div class="form-outline mt-3" *ngIf="showAutreMaladie">
+                              <label class="form-label" for="NomMaladie">Nom de Maladie et Description</label>
+                              <input type="text" id="NomMaladie" class="form-control" formControlName="desAutreMaladie">
+                            </div>
+                            <div class="form-outline mt-3" *ngIf="showAutreMaladie">
+                              <label class="form-label" for="AnalyseAutreMaladie">Analyse de votre maladie</label>
+                              <input type="file" accept="image/*" (change)="onSelectFile($event)"  id="AnalyseAutreMaladie" class="form-control" formControlName="analyseAutreMaladie">
+                            </div>
+                          </div>
+
+
+
+                        </div>
+                        <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+
+                          <div class="form-outline">
+                            <label class="form-label" for="form337Examplev61">Avez-vous deja subi une operatoin?</label>
+
+                            <div class="form-check">
+                              <input class="form-check-input" type="radio" name="ancienOperation" value="oui" id="ancienOp1" formControlName="ancienOperation"
+                                     (change)="showAncienOpFields($event)">
+                              <label class="form-check-label" for="ancienOp1">oui</label>
+                              <input class="form-check-input" style="margin-left: 2rem" type="radio" name="ancienOperation" value="non" id="ancienOp2"
+                                     formControlName="ancienOperation" (change)="hideAncienOpFields()">
+                              <label class="form-check-label" for="ancienOp2" style="margin-left: 4rem">non</label>
+                            </div>
+
+                            <div class="form-outline mt-3" *ngIf="showAncienOp">
+                              <label class="form-label" for="NomancienOp">Nom d'ancien operation</label>
+                              <input type="text" id="NomancienOp" class="form-control" formControlName="nomAncienOperation">
+                            </div>
+                            <div class="form-outline mt-3" *ngIf="showAncienOp">
+                              <label class="form-label" for="AnalyseancienOp">Analyse d'ancien operation</label>
+                              <input type="file" accept="image/*" (change)="onSelectFile($event)"  id="AnalyseancienOp" class="form-control" formControlName="analyseAncienOperation">
+                            </div>
+                          </div>
+
+
+
+                        </div>
+
+                      </div>
+                      <div class="row" style="margin-top: 1rem">
+                        <div class="col-md-4 mb-4 ml-0 pt-4 mb-md-0 pb-md-0">
+                          <div class="form-outline">
+                            <div><label class="form-label" >Importer fichier</label></div>
+                            <input type="file" accept="image/*" (change)="onSelectFile($event)"   class="form-control-file" id="exampleFormControlFile1" formControlName="image">
+
+                          </div>
+                        </div>
+
+                        <div class="col-md-4 mb-4 ml-0 pt-4 mb-md-0 pb-md-0">
+                          <div class="form-outline">
+                            <div><label class="form-label" >autre fichier</label></div>
+                            <input type="file" accept="image/*" (change)="onSelectFile($event)"   class="form-control-file" id="exampleFormControlFile12" formControlName="autreAnalyse">
+
+                          </div>
+                        </div>
+
+                      </div>
+
 
 
                     </div>
+
+
+
 
 
 
