--- a/src/app/servicePatient/chirurgie-selecionnee/chirurgie-selecionnee.component.html
+++ b/src/app/servicePatient/chirurgie-selecionnee/chirurgie-selecionnee.component.html
@@ -11,22 +11,25 @@
   </p>
   </div>
 
-
-   <div class="row card-med">
-       <div class="card card-content shadow-sm mb-5 bg-white rounded"
-       *ngFor="let medecin of medecins">
-         <div class="image">
-           <img src="{{medecin.image}}">
-         </div>
-         <h5>{{medecin.firstname}} {{medecin.lastname}}</h5>
-         <h5 >{{getSpecialiteWithoutBrackets(medecin.specialite)}}</h5>
-         <div class="btn">
-           <button (click)="voirDetails(medecin.id)">Voir detail</button>
-         </div>
-
-       </div>
+    <section>
+      <div class="card"  *ngFor="let medecin of medecins" style="background-color: white!important;">
+        <div class="img-bx">
+          <img src="{{medecin.image}}" alt="img" />
+        </div>
+        <div class="content" style="margin-top: -2.5rem!important;">
+          <div class="detail" >
+            <h2>{{medecin.firstname}} {{medecin.lastname}}<br /><span>{{getSpecialiteWithoutBrackets(medecin.specialite)}}</span></h2>
+            <ul class="sci">
+              <li class="btn">
+                <button (click)="voirDetails(medecin.id)">Voir detail</button>
+              </li>
 
 
-   </div>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 </div>
