--- a/src/app/Admin/profil-admin/profil-admin.component.html
+++ b/src/app/Admin/profil-admin/profil-admin.component.html
@@ -23,8 +23,8 @@
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
       <a class="nav-link" href="dashboardAdmin">
-        <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Dashboard</span></a>
+        <i class="bi bi-bar-chart-line-fill"  style="color: white;font-size:1.2rem"></i>
+        <span style="margin-left: 0.5rem;font-size: 16px">Dashboard</span></a>
     </li>
 
     <!-- Divider -->
@@ -39,10 +39,12 @@
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
          aria-expanded="true" aria-controls="collapseTwo">
-        <span style="margin-left: 0.5rem">Comptes</span>
+        <i class="bi bi-person-fill-gear" style="color: white;font-size:1.2rem"></i>
+        <span style="margin-left: 0.5rem;font-size: 16px">Comptes</span>
       </a>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
+
           <h6 class="collapse-header">Gérer comptes</h6>
           <a class="collapse-item" href="comptesMedecins">Medecins</a>
           <a class="collapse-item" href="comptesPatients">Patients</a>
@@ -54,7 +56,8 @@
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
          aria-expanded="true" aria-controls="collapseUtilities">
-        <span style="margin-left: 0.5rem">Liste des Rendez-vous</span>
+        <i class="bi bi-card-list" style="color: white;font-size:1.2rem"></i>
+        <span style="margin-left: 0.5rem;font-size: 16px">Liste des Rendez-vous </span>
       </a>
       <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
            data-parent="#accordionSidebar">
@@ -80,8 +83,8 @@
     <li class="nav-item">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsethree"
          aria-expanded="true" aria-controls="collapsethree">
-        <i class="bi bi-file-plus-fill" style="color: white"></i>
-        <span style="margin-left: 0.5rem">Chirurgie</span>
+        <i class="bi bi-plus-square-fill"style="color: white;font-size: 1.2rem"></i>
+        <span style="margin-left: 0.5rem;font-size: 16px">Chirurgie</span>
       </a>
       <div id="collapsethree" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
@@ -101,8 +104,9 @@
     </div>
     <li class="nav-item">
       <a class="nav-link" href="listePatient">
-        <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Liste des Patients</span></a>
+        <i class="bi bi-card-list" style="color: white;font-size:1.2rem"></i>
+
+        <span style="margin-left: 0.5rem;font-size: 16px">Liste des Patients</span></a>
     </li>
 
     <!-- Divider -->
@@ -114,10 +118,21 @@
     </div>
     <li class="nav-item">
       <a class="nav-link" href="listeMedecin">
-        <i class="fas fa-fw fa-tachometer-alt"></i>
-        <span>Liste des Médecins</span></a>
+        <i class="bi bi-card-list" style="color: white;font-size:1.2rem"></i>
+        <span style="margin-left: 0.5rem ;font-size: 16px" >Liste des Médecins</span></a>
     </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+    <div class="sidebar-heading">
+      Avis Patient
+    </div>
 
+    <li class="nav-item">
+      <a class="nav-link" href="avisPatient">
+        <i class="fas fa-fw fa-tachometer-alt"></i>
+        <i class="bi bi-chat-right-fill" style="color: white;font-size:1.2rem"></i>
+        <span style="margin-left: 0.5rem;font-size: 16px">Avis Patient</span></a>
+    </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
@@ -141,8 +156,9 @@
 
         <!-- Sidebar Toggle (Topbar) -->
         <form class="form-inline">
+          <i class="bi bi-box-arrow-left" style="color: white"></i>
+
           <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-            <i class="fa fa-bars"></i>
           </button>
         </form>
 
