--- a/src/app/Admin/profil-admin/profil-admin.component.scss
+++ b/src/app/Admin/profil-admin/profil-admin.component.scss
@@ -39,7 +39,8 @@ span{
 }
 
 html {
-  font-family: sans-serif;
+  font-family: sans-seri f;
+  font-size: 25px;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
