--- a/src/app/EspacePatient/login-patient/login-patient.component.html
+++ b/src/app/EspacePatient/login-patient/login-patient.component.html
@@ -1,18 +1,100 @@
+
 <app-header></app-header>
+<div class="login-root" style=" margin-top: 6rem !important;
+">
+  <div class="box-root flex-flex flex-direction--column" style="min-height: 100vh;flex-grow: 1;">
+    <div class="loginbackground box-background--white padding-top--64">
+      <div class="loginbackground-gridContainer">
+        <div class="box-root flex-flex" style="grid-area: top / start / 8 / end;">
+          <div class="box-root" style="background-image: linear-gradient(white 0%, rgb(247, 250, 252) 33%); flex-grow: 1;">
+          </div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 4 / 2 / auto / 5;">
+          <div class="box-root box-divider--light-all-2 animationLeftRight tans3s" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 6 / start / auto / 2;">
+          <div class="box-root box-background--blue800" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 7 / start / auto / 4;">
+          <div class="box-root box-background--blue animationLeftRight" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 8 / 4 / auto / 6;">
+          <div class="box-root box-background--gray100 animationLeftRight tans3s" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 2 / 15 / auto / end;">
+          <div class="box-root box-background--cyan200 animationRightLeft tans4s" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 3 / 14 / auto / end;">
+          <div class="box-root box-background--blue animationRightLeft" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 4 / 17 / auto / 20;">
+          <div class="box-root box-background--gray100 animationRightLeft tans4s" style="flex-grow: 1;"></div>
+        </div>
+        <div class="box-root flex-flex" style="grid-area: 5 / 14 / auto / 17;">
+          <div class="box-root box-divider--light-all-2 animationRightLeft tans3s" style="flex-grow: 1;"></div>
+        </div>
+      </div>
+    </div>
+    <div class="box-root padding-top--24 flex-flex flex-direction--column" style="flex-grow: 1; z-index: 9;">
 
-<div class="container">
-  <form  [formGroup]="authenticateForm" (ngSubmit)="loginPatient()">
-  <div class="inputs">
-    <label>EMAIL</label>
-    <input type="email" formControlName="email" />
-    <label>PASSWORD</label>
-    <input type="password"  formControlName="password" />
-    <a href="" style="color: #0066FF; margin-left: 8rem; margin-top: 2rem !important;"  routerLink="/resetPassword" routerLinkActive="active">Mot de passe oublié </a>
+      <div class="formbg-outer">
+        <div class="formbg">
+          <div class="formbg-inner padding-horizontal--48">
+            <h2 class="padding-bottom--15">S'authentifier</h2>
+            <form id="stripe-login" [formGroup]="authenticateForm" (ngSubmit)="loginPatient()">
+              <div class="field padding-bottom--24">
+                <label >Email</label>
+                <input type="text"  formControlName="email"  required>
 
-    <button type="submit" routerLink="/rdvAvecMed" >Connnexion</button>
-    <button type="submit" class="btn2"  routerLink="/signPatient" >Inscrire</button>
+                <div
+                  *ngIf="
+        authenticateForm.controls['email'].invalid &&
+        (authenticateForm.controls['email'].dirty ||
+          authenticateForm.controls['email'].touched)
+      "
+                  class="alert-danger"
+                  style="color: red ;margin-top: 0.2rem"
+                >
+                  <div *ngIf="authenticateForm.controls['email'].errors?.['required']">
+                    Ce champ est obligatoire !.
+                  </div>
+                </div>
+              </div>
+              <div class="field padding-bottom--24">
+                <label >Password</label>
+                <input type="password" formControlName="password" required>
+                <div
+                  *ngIf="
+        authenticateForm.controls['password'].invalid &&
+        (authenticateForm.controls['password'].dirty ||
+          authenticateForm.controls['password'].touched)
+      "
+                  class="alert-danger"
+                  style="color: red ;margin-top: 0.2rem"
+                >
+                  <div *ngIf="authenticateForm.controls['password'].errors?.['required']">
+                    Ce champ est obligatoire !.
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="field padding-bottom--24 btn">
+
+                <button type="submit" routerLink="/rdvAvecMed" >Connnexion</button>
+                <br>
+                <button type="submit" class="btn2"  routerLink="/signPatient"
+              style="background-color: transparent;color: #5469d4;border:1px solid #5469d4 "
+                >Inscrire</button>
+              </div>
+              <!--routerLink="/loginPatient" routerLinkActive="active"-->
+            </form>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
   </div>
-  </form>
-
-
 </div>
+
