--- a/src/app/apropos/apropos.component.scss
+++ b/src/app/apropos/apropos.component.scss
@@ -159,10 +159,10 @@ img {
   color: #272727;
   padding: 50px;
   box-shadow: 0px 7px 24px rgba(100, 100, 100, 0.4);
+  margin-left: 1rem;
 }
 .l-card__text{
-  width: 4rem;
-  height: 2rem;
+
 }
 .l-card__text p {
   font-size: 30px;
@@ -234,5 +234,6 @@ img {
   overflow-x:auto ;
   overflow-y: hidden;
   scroll-behavior: smooth;
-  white-space: nowrap;
+  white-space: normal;
+
 }
