--- a/src/app/composants/header/header.component.scss
+++ b/src/app/composants/header/header.component.scss
@@ -21,6 +21,7 @@ a{
 }
 .navbar {
   position: fixed;
+  height: 6rem;
   top: 0;
   left: 0;
   right: 0;
@@ -31,10 +32,11 @@ a{
   margin-right: 6rem; /* Adjust the margin value as needed */
 }
 .image{
-  width: 3rem;
-  height: 3rem;
+  width: 8rem;
+  height: 8rem;
   margin-left: 10rem;
   border-radius: 50%;
+  margin-top: -1rem;
 
 
 }
