--- a/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
+++ b/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
@@ -4,9 +4,9 @@
   <ul class="responsive-table">
     <li class="table-header">
       <div class="col col-1">type de Chirurgie</div>
-      <div class="col col-2">Nom de Médecin</div>
       <div class="col col-3">Status de RDV</div>
       <div class="col col-4">Date de rendez-vous</div>
+
       <div class="col col-5"></div>
 
     </li>
@@ -17,7 +17,6 @@
         </div>
 
       </div>
-      <div class="col col-2" data-label="Nom et Prénom"> {{rdv.doctor.firstname}} {{rdv.doctor.lastname}}</div>
       <div class="col col-3" data-label="Status">
         <p *ngIf="rdv.status === 'IN_PROGRESS'">Votre Demande est en attente <i class="bi bi-circle-fill" style="color: orange ; font-size:10px"></i></p>
         <p *ngIf="rdv.status === 'ACCEPTED'">Votre Demande est acceptée <i class="bi bi-circle-fill" style="color: green ; font-size:10px"></i>
@@ -31,6 +30,8 @@
         <p>{{rdv.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}</p>
 
       </div>
+    <!-- <div class="col col-2" data-label="Nom et Prénom" *ngIf="listRdv"> {{rdv.doctor.firstname}} {{rdv.doctor.lastname}}</div>
+-->
 
       <div class="dropdown  col col-5"  data-label="Action">
 
